[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ball/Dust Particle.png" type="Texture" id=1]
[ext_resource path="res://scenes/ball/ball.gd" type="Script" id=2]
[ext_resource path="res://sounds/brick_sounds/cannon_sounds/shot.wav" type="AudioStream" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[node name="ball" type="RigidBody2D" groups=["brick"]]
position = Vector2( 520, 552 )
collision_mask = 2
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 10
contact_monitor = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
life = 9

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 9.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -18.0

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_ball_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
